Removed Christmas Snow :smile:
Christmas is over, snow is gone.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     tl.to('.move2', 3, {ease: Power2.easeOut, scale:.85}, 'move2');
     tl.fromTo('.pointer', 3, {ease: Power2.easeOut, opacity:0, rotation:20, scale:.65}, {ease: Bounce.easeOut, opacity:100, rotation:3, scale:.95});
 
-    particlesJS.load('particles-js', './scripts/particles.json', function(){console.log('Particles Loaded!'),console.log('Have a Merry Christmas!')});
+    //particlesJS.load('particles-js', './scripts/particles.json', function(){console.log('Particles Loaded!'),console.log('Have a Merry Christmas!')});
 
     console.log('Rapture Version: 0.1.5')
     </script>
