--- a/Team/zoey/index.html
+++ b/Team/zoey/index.html
@@ -11,5 +11,7 @@
 </head>
     <header>
 		<h1>Zoey's Page</h1>
+		<h3>Redirecting to Twitter</h3>
+		<meta http-equiv="refresh" content="0; URL='https://www.twitter.com/lilZoeyxanax'" />
     </header>
 </html>
