Fixed typos in Coming soon page

--- a/Team/zoey/soon.html
+++ b/Team/zoey/soon.html
@@ -4,10 +4,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Zoey's Coming Soon Page!">
-    <meta name="keywords" content="stream, streamers, game, gamer, content, creators, charity, team, entertainers, content, gaming">
+    <meta name="description" content="Zoey's Profile is Coming Soon!">
+    <meta name="keywords" content="coming soon,">
     <meta name="author" content="Zoey Rad">
-    <title>Zoey | RaptureLab</title>
+    <title>Coming Soon! | RaptureLab</title>
     <!-- Style Sheets -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
@@ -36,7 +36,7 @@
 
       <!-- Middle collumb used -->
       <div class="col-8" style="background-color:lavender;">
-        <h5>Keep up to date by following her twitter or if it's available visit here beta page: </h5>
+        <h5>Keep up to date by following her twitter or if it's available visit her beta page: </h5>
         <div class="text-center row">
 
           <!-- Left collumb unused -->
