--- a/Team/zoey/beta/index.html
+++ b/Team/zoey/beta/index.html
@@ -1,1 +1,147 @@
-<h1>test</h1>
+<!DOCTYPE html>
+<html>
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Zoey's Account Page!">
+    <meta name="keywords" content="stream, streamers, game, gamer, content, creators, charity, team, entertainers, content, gaming">
+    <meta name="author" content="Zoey Rad">
+    <title>Zoey | RaptureLab</title>
+    <!-- Style Sheets -->
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/v4-shims.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+</head>
+<body class="d-flex flex-column h-100">
+<div>
+<!-- Nav bar -->
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <h3 class="navbar-brand" href="./index.html">Zoey</h3>
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="./index.html">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Portfolio</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expand="false">Projects</a>
+        <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#">Minecraft</a>
+          <a class="dropdown-item" href="#">Nintendathon.net</a>
+          <a class="dropdown-item" href="#">Rapturelab.net</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expand="false">Charity</a>
+        <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#">SOLO</a>
+          <a class="dropdown-item" href="#">Nintendathon</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Achievements <span class="sr-only">(Disabled WIP)</span></a>
+      </li>
+    </ul>
+  </nav>
+</header>
+
+<!-- Page Alert -->
+<!-- <div class="toastalert" data-autohide="false">
+<div class="alert alert-dark" role="alert">
+  <h6><span class="text-danger"><a target="_blank"><i class="pr-4 fas fa-exclamation"></i></a></span><span></span>You're on a beta Page! Please remember there may be bugs or problems! Features are being worked on!<span><button type="button" class="close" data-dismiss="toast" aria-label="Close Alert"><span aria-hidden="true">&times;</span></button></span></h6>
+
+</div>
+</div> -->
+
+<!-- Main Page -->
+<main role="main" class="flex-shrink-0">
+  <div>
+    <!-- Top left Social links -->
+    <!-- <div>
+      <div class="container-fluid">
+        <div>
+          <h2>
+            <span><a href="https://www.twitter.com/lilzoeyxanax" target="_blank"><i class="fab fa-twitter"></i></a></span>
+            <span><a href="https://www.reddit.com/user/lilZoeyXanax/" target="_blank"><i class="fab fa-reddit-alien"></i></a></span>
+            <span><a href="https://www.youtube.com/channel/UCLfN4lSRdk1bJfJZX3XTyLg" target="_blank"><i class="fab fa-youtube"></i></a></span>
+            <span><a href="https://www.instagram.com/lilzoeyxanax" target="_blank"><i class="fab fa-instagram"></i></a></span>
+          </h2>
+        </div>
+      </div>
+    </div> -->
+  <!-- Carousel -->
+<div id="carouselHome" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselHome" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselHome" data-slide-to="1"></li>
+    <li data-target="#carouselHome" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="./img/NCharity.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Nintendathon</h5>
+        <p>A nintendo based charity event that Zoey Directs.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="./img/DreamCraft.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>DreamCraft</h5>
+        <p>Private Minecraft SMP server Zoey plays and records on.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="./img/SecretsOfHyrule.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Secrets of Hyrule</h5>
+        <p>A massive zelda themed Minecraft Adventure Map Zoey is creating.</p>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselHome" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselHome" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
+</main>
+
+
+<!-- Footer bar -->
+
+<footer class="text-center footer mt-auto py-3 bg-dark">
+  <div class="container">
+    <span class="text-muted">© 2020 RaptureLab</span>
+  </div>
+</footer>
+</body>
+</div>
+
+
+<!-- Scripts -->
+<script src="./scripts/main.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/plugins/CSSPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/easing/EasePack.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenLite.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineLite.min.js"></script>
+<script>
+
+$(document).ready(function(){
+  $('.toastalert').toast('show');
+});
+
+console.log('Zoeys Page Version: 0.5')
+</script>
+
+</html>
