--- a/Team/zoey/beta/index.html
+++ b/Team/zoey/beta/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/v4-shims.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column h-100 bg-dark">
 <div>
 <!-- Nav bar -->
 <header>
@@ -114,7 +114,8 @@
 </div>
 </div>
 </main>
-
+<!-- Spacer bar -->
+<div style="height: 50px;" class="bg-secondary"></div>
 
 <!-- Footer bar -->
 
