--- a/Team/zoey/beta/index.html
+++ b/Team/zoey/beta/index.html
@@ -78,7 +78,7 @@
   <ol class="carousel-indicators">
     <li data-target="#carouselHome" data-slide-to="0" class="active"></li>
     <li data-target="#carouselHome" data-slide-to="1"></li>
-    <li data-target="#carouselHome" data-slide-to="2"></li>
+    <!-- <li data-target="#carouselHome" data-slide-to="2"></li> -->
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -88,13 +88,13 @@
         <p>A nintendo based charity event that Zoey Directs.</p>
       </div>
     </div>
-    <div class="carousel-item">
+    <!-- <div class="carousel-item">
       <img src="./img/DreamCraft.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>DreamCraft</h5>
         <p>Private Minecraft SMP server Zoey plays and records on.</p>
       </div>
-    </div>
+    </div> -->
     <div class="carousel-item">
       <img src="./img/SecretsOfHyrule.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
