Added SoH Tester page and made nav Sticky
Added:
Secrets of Hyrule Testers Page, for inputing a key field to get the latest test map.
Comp image for testing page
Made nav bar sticky

--- a/Team/zoey/beta/index.html
+++ b/Team/zoey/beta/index.html
@@ -17,7 +17,7 @@
 <body class="d-flex flex-column h-100 bg-dark">
 <div>
 <!-- Nav bar -->
-<header>
+<header class="sticky-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <h3 class="navbar-brand" href="./index.html">Zoey</h3>
     <ul class="navbar-nav">
